--- a/analytics.html
+++ b/analytics.html
@@ -201,17 +201,17 @@
             <span class="article-date">📅 20.11.2025</span>
             <h2 data-key="art3_title">Аналіз медіа: Як працює ТСН?</h2>
             <div class="article-content" data-key="art3_content">
-                <p>ТСН працює в режимі постійної оперативності й залишається одним із найпомітніших масових онлайн-медіа України. За час спостереження стало видно: це ресурс, який прагне одночасно повідомляти про головні новини війни й давати легкі, розважальні теми — від гороскопів до гламурних історій. Така змішаність визначає його стиль і позиціонування.<br><br>
+                <p>ТСН працює в режимі постійної оперативності й залишається одним із найпомітніших масових онлайн-медіа України. За час спостереження стало видно: це ресурс, який прагне одночасно повідомляти про головні новини війни й давати легкі, розважальні теми — від гороскопів до гламурних історій. Така змішаність визначає його стиль і позиціювання.<br><br>
 
                 <b>Тематика та подача</b><br><br>
                 <b>Головний акцент — війна, безпека, політика. Новини про бої, вибухи та удари дронів публікуються майже в режимі реального часу. Поруч із ними з’являються матеріали про селебріті, стиль і курйози — контент, який розвантажує читача й водночас робить медіа “для всіх”.</b><br><br>
                 Мова новин проста, пряма й швидка. Заголовки часто емоційні або сенсаційні, що допомагає виділятися в стрічці, але інколи наближає ресурс до таблоїдного стилю. Фото та відео — ключовий інструмент: мультимедійність замінює глибину аналітики.<br><br>
 
                 <b>Інтерфейс і користувацький досвід</b><br><br>
-                Сайт зручний, із чітким блоком “Головне” та великою кількістю тематичних рубрик. Присутні погода, курси валют, пряма трансляція — усе, що створює відчуття повноцінного новинарного порталу.<br><br>
+                Сайт зручний, із чітким блоком “Головне” та великою кількістю тематичних рубрик. Присутні погода, курси валют, пряма трансляція — усе, що створює відчуття повноцінного новинного порталу.<br><br>
                 Водночас інтенсивність зображень і велика кількість категорій можуть перевантажувати. Контраст між «війною» і «гламуром» на одній сторінці інколи створює дисонанс.<br><br>
 
-                <b>Аудиторія та позиціонування</b><br><br>
+                <b>Аудиторія та позиціювання</b><br><br>
                 ТСН орієнтується на широку аудиторію, якій потрібна швидка інформація без зайвих пояснень. Це не медіа глибокої аналітики — це ресурс оперативних новин. Його сила — темп і охоплення; його слабкість — поверховість при складних темах.<br><br>
 
                 <b>Соцмережі й партисипативність</b><br><br>
@@ -296,14 +296,14 @@
 
                 // Article 3
                 art3_title: "Аналіз медіа: Як працює ТСН?",
-                art3_content: `<p>ТСН працює в режимі постійної оперативності й залишається одним із найпомітніших масових онлайн-медіа України. За час спостереження стало видно: це ресурс, який прагне одночасно повідомляти про головні новини війни й давати легкі, розважальні теми — від гороскопів до гламурних історій. Така змішаність визначає його стиль і позиціонування.<br><br>
+                art3_content: `<p>ТСН працює в режимі постійної оперативності й залишається одним із найпомітніших масових онлайн-медіа України. За час спостереження стало видно: це ресурс, який прагне одночасно повідомляти про головні новини війни й давати легкі, розважальні теми — від гороскопів до гламурних історій. Така змішаність визначає його стиль і позиціювання.<br><br>
                 <b>Тематика та подача</b><br><br>
                 <b>Головний акцент — війна, безпека, політика. Новини про бої, вибухи та удари дронів публікуються майже в режимі реального часу. Поруч із ними з’являються матеріали про селебріті, стиль і курйози — контент, який розвантажує читача й водночас робить медіа “для всіх”.</b><br><br>
                 Мова новин проста, пряма й швидка. Заголовки часто емоційні або сенсаційні, що допомагає виділятися в стрічці, але інколи наближає ресурс до таблоїдного стилю. Фото та відео — ключовий інструмент: мультимедійність замінює глибину аналітики.<br><br>
                 <b>Інтерфейс і користувацький досвід</b><br><br>
-                Сайт зручний, із чітким блоком “Головне” та великою кількістю тематичних рубрик. Присутні погода, курси валют, пряма трансляція — усе, що створює відчуття повноцінного новинарного порталу.<br><br>
+                Сайт зручний, із чітким блоком “Головне” та великою кількістю тематичних рубрик. Присутні погода, курси валют, пряма трансляція — усе, що створює відчуття повноцінного новинного порталу.<br><br>
                 Водночас інтенсивність зображень і велика кількість категорій можуть перевантажувати. Контраст між «війною» і «гламуром» на одній сторінці інколи створює дисонанс.<br><br>
-                <b>Аудиторія та позиціонування</b><br><br>
+                <b>Аудиторія та позиціювання</b><br><br>
                 ТСН орієнтується на широку аудиторію, якій потрібна швидка інформація без зайвих пояснень. Це не медіа глибокої аналітики — це ресурс оперативних новин. Його сила — темп і охоплення; його слабкість — поверховість при складних темах.<br><br>
                 <b>Соцмережі й партисипативність</b><br><br>
                 У соцмережах медіа працює максимально візуально.
