--- a/backstage.html
+++ b/backstage.html
@@ -131,7 +131,7 @@
             <h2 data-key="art1_title">🎥 «День у ритмі звуків»</h2>
             <span class="author" data-key="art1_auth">Автор: Шандрук Вероніка</span>
             
-            <p data-key="art1_desc">Студентка журфаку ЛНУ Шандрук Вероніка передає свій день через атмосферу звуків — від ранкової метушні до вечірніх нот факультетського життя. Міні-історія, зібрана не словами, а аудіо.</p>
+            <p data-key="art1_desc">Студентка журфаку ЛНУ Шандрук Вероніка демонструє свій день через атмосферу звуків — від ранкової метушні до вечірніх нот факультетського життя. Мініісторія, зібрана не словами, а аудіо.</p>
             
             <div style="background: rgba(0,0,0,0.3); padding: 40px; border-radius: 15px; text-align: center; border: 1px solid var(--glass-border); margin-top: 20px;">
                 <p style="margin-bottom: 25px; color: var(--text-secondary);" data-key="video_warn">Через обмеження YouTube це відео доступне лише за посиланням:</p>
@@ -284,7 +284,7 @@
                 header_sub: "Практичний досвід, помилки та інсайди професії",
                 art1_title: "🎥 «День у ритмі звуків»",
                 art1_auth: "Автор: Шандрук Вероніка",
-                art1_desc: "Студентка журфаку ЛНУ Шандрук Вероніка передає свій день через атмосферу звуків — від ранкової метушні до вечірніх нот факультетського життя. Міні-історія, зібрана не словами, а аудіо.",
+                art1_desc: "Студентка журфаку ЛНУ Шандрук Вероніка демонструє свій день через атмосферу звуків — від ранкової метушні до вечірніх нот факультетського життя. Мініісторія, зібрана не словами, а аудіо.",
                 video_warn: "Через обмеження YouTube це відео доступне лише за посиланням:",
                 btn_yt: "Дивитися на YouTube",
                 art2_title: "Майбутнє професії: що чекає сучасного журналіста",
