--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                         Це простір, де журналістика відкриває свої таємниці. Тут ви не просто бачите готовий матеріал, 
                         а можете заглянути в процес його створення: як народжується ідея, як перевіряються факти, як формується сюжет і приймаються редакційні рішення.
                         Цей сайт створений для тих, хто хоче зрозуміти роботу журналістів зсередини: студентів журфаку, молодих журналістів, а також усіх, 
-                        хто цікавиться, як формується медіа-продукт у сучасному світі.
+                        хто цікавиться, як формується медіапродукт у сучасному світі.
                     </p>
                     <br>
 
@@ -415,7 +415,7 @@
     </div>
 
     <footer data-key="footer_text">
-        © 2025 «За Лаштунками». Студентський Медіапроєкт. 
+    Як з нами зв'язатися:<br><br>zalashtunkamy@gmail.com<br><br>+380959469356<br><br>© 2025 «За Лаштунками». Студентський Медіапроєкт. 
     </footer>
 
     <div id="myModal" class="modal">
@@ -439,7 +439,7 @@
                 img: "https://i.ibb.co/jkLPTTpn/2025-12-03-234119442.png",
                 uk: {
                     title: "Посвята першокурсників у Fest Republic: яскравий старт",
-                    text: "Профбюро журналістики стало організатором великої та довгоочікуваної події – посвяти першокурсників 2025 року, що відбулася 21 вересня у Fest Republic. Про урочистість та найяскравіші моменти профбюро повідомило на своєму офіційному Instagram-акаунті: <a href='https://www.instagram.com/profjourn_lnu' target='_blank' style='color:var(--accent-color); text-decoration: underline;'>@profjourn_lnu</a><br><br>На посвяту зібралися десятки студентів – як новачки, так і старші курси. Атмосфера була гучною, жвавою та дуже «першокурсницькою»: знайомства, сміх, фото, перші внутрішні жарти і відчуття того, що всі вже частина одного факультету.<br><br>Втім, враження були різні. Студентка Шандрук Вероніка поділилася власним відгуком: «Було весело, проте музика бажає кращого».<br><br>Посвята стала стартовою точкою для першокурсників, які тепер офіційно долучилися до великої спільноти факультету журналістики."
+                    text: "Профбюро журналістики стало організатором великої та довгоочікуваної події – посвяти першокурсників 2025 року, що відбулася 21 вересня у Fest Republic. Про урочистість та найяскравіші моменти профбюро повідомило на своєму офіційному Instagram-акаунті: <a href='https://www.instagram.com/profjourn_lnu' target='_blank' style='color:var(--accent-color); text-decoration: underline;'>@profjourn_lnu</a><br><br>На посвяту зібралися десятки студентів – як новачки, так і старші курси. Атмосфера була гучною, жвавою та дуже «першокурсницькою»: знайомства, сміх, фото, перші внутрішні жарти й відчуття того, що всі вже частина одного факультету.<br><br>Втім, враження були різні. Студентка Шандрук Вероніка поділилася власним відгуком: «Було весело, проте музика бажає кращого».<br><br>Посвята стала стартовою точкою для першокурсників, які тепер офіційно долучилися до великої спільноти факультету журналістики."
                 },
                 en: {
                     title: "Freshmen Initiation at Fest Republic: A Bright Start",
@@ -490,7 +490,7 @@
                 header_sub: "Простір, де журналістика відкриває свої таємниці",
                 concept_title: "Вітальне слово від редакції",
                 concept_h3_1: "Ласкаво просимо на «За Лаштунками»",
-                concept_p1: "Це простір, де журналістика відкриває свої таємниці. Тут ви не просто бачите готовий матеріал, а можете заглянути в процес його створення: як народжується ідея, як перевіряються факти, як формується сюжет і приймаються редакційні рішення. Цей сайт створений для тих, хто хоче зрозуміти роботу журналістів зсередини: студентів журфаку, молодих журналістів, а також усіх, хто цікавиться, як формується медіа-продукт у сучасному світі.",
+                concept_p1: "Це простір, де журналістика відкриває свої таємниці. Тут ви не просто бачите готовий матеріал, а можете заглянути в процес його створення: як народжується ідея, як перевіряються факти, як формується сюжет і приймаються редакційні рішення. Цей сайт створений для тих, хто хоче зрозуміти роботу журналістів зсередини: студентів журфаку, молодих журналістів, а також усіх, хто цікавиться, як формується медіапродукт у сучасному світі.",
                 concept_h3_2: "Навіщо ми це робимо?",
                 concept_p2: "Ми прагнемо показати, що медіа — це не лише заголовки та картинки, а складний, живий процес, де кожне рішення важливе, а кожна деталь має значення.",
                 concept_h3_3: "Що ви тут знайдете?",
@@ -511,7 +511,7 @@
                 rubric_1_desc: "Практита майбутніх журналістів.<br><br>Натисніть, щоб переглянути",
                 rubric_2_title: "МедіаРозбір",
                 rubric_2_desc: "Аналіз, розбір, етика.<br><br>Натисніть, щоб переглянути",
-                footer_text: "© 2025 «За Лаштунками». Студентський Медіапроєкт."
+                footer_text: "Як з нами зв'язатися:<br><br>zalashtunkamy@gmail.com<br><br>+380959469356<br><br>© 2025 «За Лаштунками». Студентський Медіапроєкт."
             },
             en: {
                 nav_about: "👋 About Us",
